syntax = "proto3";

option csharp_namespace = "Fyley.Services.Account";

package account;

service AccountService {
  rpc DefineAccount (DefineAccountRequest) returns (DefineAccountResponse);
  rpc ListAccounts (ListAccountsRequest) returns (ListAccountsResponse);
  rpc ArchiveAccount (ArchiveAccountRequest) returns (ArchiveAccountResponse);
}

/* DefineAccount */

message DefineAccountRequest {
  string name = 1;
  string description = 2;
  AccountNumber accountNumber = 3;
}

message DefineAccountResponse {
  string id = 1;
}

/* ListAccounts */

message ListAccountsRequest {
}

message ListAccountsResponse {
  repeated Account accounts = 1;
}

/* ArchiveAccount */

message ArchiveAccountRequest {
  string id = 1;
}

message ArchiveAccountResponse {
}

/* Models */

message Account {
  string id = 1;
  string name = 2;
  string description = 3;
  AccountNumber accountNumber = 4;
}

message AccountNumber {
  string value = 1;
  Type type = 2;

  enum Type {
    UNKNOWN = 0;
    OTHER = 1;
    IBAN = 2;
  }
}